--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   <span class="gradient-text">Welcome to CineScope</span>
 </h1>
       <p class="tagline-main">Browse top-rated, trending, and new movies in one place</p>
-      <a href="index.html" class="btn">Get Started</a>
+      <a href="home.html" class="btn">Get Started</a>
       <p class="sub-tagline">Lights, Camera, Browse</p>
     </div>
   </div>
