--- a/home.html
+++ b/home.html
@@ -1,21 +1,26 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome | Movie App</title>
-  <link rel="stylesheet" href="home.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie app</title>
+    <link rel="stylesheet" href="example1.css">
 </head>
 <body>
-  <div class="container">
-    <h1>
-  <span class="emoji">🎬</span>
-  <span class="gradient-text">Welcome to CineScope</span>
-</h1>
-      <p class="tagline-main">Browse top-rated, trending, and new movies in one place</p>
-      <a href="home.html" class="btn">Get Started</a>
-      <p class="sub-tagline">Lights, Camera, Browse</p>
-    </div>
-  </div>
+   <header class="header">
+  <div class="tagline">
+  <span class="emoji">🎬</span> <span class="text">Find your next favorite movie</span>
+</div>
+
+  <form id="form">
+    <input type="text" id="search" class="search" placeholder="Search movies...">
+  </form>
+</header>
+
+    <main id="main">
+    
+    </main>
+   
+    <script src="example.js"></script>
 </body>
-</html>
+</html> 
